--- a/package.json
+++ b/package.json
@@ -1,33 +1,23 @@
 {
-  "name": "svelte-typescript",
+  "name": "svelte-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "lib/index.js",
+  "private": true,
   "scripts": {
-    "start": "yarn run rollup -c rollup.config.js --watch",
-    "build": "tsc -p .",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public --no-clear"
   },
   "devDependencies": {
-    "@pyoner/svelte-ts-preprocess": "^1.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.6.1",
-    "@typescript-eslint/parser": "^2.6.1",
-    "eslint": "^6.6.0",
-    "nodemon": "1.18.4",
-    "rollup": "1.27.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-typescript2": "^0.24.3",
-    "svelte": "^3.14.1",
-    "svelte-preprocess": "^3.2.6",
-    "ts-node": "8.5.2",
-    "typescript": "3.7.2"
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0"
   },
-  "dependencies": {},
-  "keywords": []
+  "dependencies": {
+    "sirv-cli": "^2.0.0"
+  }
 }
